<resources>
    <string name="app_name">Social_Event</string>
    <string name="title_activity_profile">Social_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Change Photo</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_events">ALL Events</string>
    <string name="menu_ngos">NGOS</string>
    <string name="menu_developers">Developers</string>
    <string name="menu_share">Share</string>
    <string-array name="homelist">
        <item>Girls_Education</item>
        <item>Child_Labour</item>
        <item>Child_MArriage</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
